--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+        const firebaseConfig = {
+      apiKey: "AIzaSyCNKk787E4Tu6fcIEmtW9qYWXVGKUlPFn4",
+      authDomain: "ordem-ede17.firebaseapp.com",
+      projectId: "ordem-ede17",
+      storageBucket: "ordem-ede17.appspot.com",
+      messagingSenderId: "420196568466",
+      appId: "1:420196568466:web:40f4265204d73b03b9454b"
     };
-
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
